# multiview_ETH_XGaze

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
multiview_eth_xgaze/: gaze_estimator.py  inference.py  version.py
multiview_eth_xgaze/eth_xgaze/: model.py
